# sxt-2023

./: Fluxfile  README.md  package-lock.json
.github/workflows/: build-component.yml  build-deploy.yml
api/: .env-template  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  manage.py  pyproject.toml  test_email.py
api/.kiro/specs/admin-statistics-dashboard/: tasks.md
api/sxt_2023/apps/people/: models.py  serializers.py  views.py
api/sxt_2023/apps/people/migrations/: 0002_user_registration_brand.py  0003_alter_user_email.py  0004_alter_user_email.py
api/sxt_2023/apps/sxt2023_api/: admin.py  apps.py  emails.py  models.py  serializers.py  views.py
api/sxt_2023/apps/sxt2023_api/fixtures/: brands.json
api/sxt_2023/apps/sxt2023_api/migrations/: 0001_initial.py  0002_treepageview.py
api/sxt_2023/apps/sxt2023_api/templates/mails/: raffle.html  raffle.mjml  registration.html  registration.mjml
api/sxt_2023/django/: settings.py  urls.py  wsgi.py
api/sxt_2023/templates/admin/: invitations_stats.html  tree_scans_stats.html  tree_visits_matrix.html
front/: nuxt.config.js  package-lock.json  package.json
front/components/: ContestInformation.vue  CustomCarousel.vue  Footer.vue  Header.vue  LazyCarousel.vue  RegistrationFooter.vue  RegistrationForm.vue  RegistrationTreeStreetMap.vue  RegistrationTreeStreetMapConfirmation.vue  StickyHeader.vue
front/composables/: useAPI.js
front/layouts/: check.vue  conditions.vue  confirmation.vue  default.vue  registration.vue  registrationForm.vue  scan.vue
front/middleware/: check.js  confirmation.js  registration.js  (+1 more)
(+30 files in other folders)
